[package]
name = "hyte"
version = "0.1.0"
edition = "2021"
description = "A hypothesis testing library crate for Z, T, and Pearson's Chi-squared tests."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.16.0"
