[package]
name = "hyte"
version = "0.1.1"
edition = "2021"
description = "A hypothesis testing library crate for Z, T, and Pearson's Chi-squared tests."
license = "MIT"
repository = "https://github.com/abyanmajid/hyte"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.16.0"
